gen/com/smcplugin/parser/SmcParser.java
// This is a generated file. Not intended for manual editing.
package com.smcplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.smcplugin.psi.SmcTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static com.smcplugin.psi.impl.SmcPsiImplUtil.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmcParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACCESS) {
      r = access(b, 0);
    }
    else if (t == ACTION) {
      r = action(b, 0);
    }
    else if (t == ACTIONS) {
      r = actions(b, 0);
    }
    else if (t == ACTIONS_BLOCK) {
      r = actions_block(b, 0);
    }
    else if (t == ARGUMENT) {
      r = argument(b, 0);
    }
    else if (t == ARGUMENTS) {
      r = arguments(b, 0);
    }
    else if (t == BLOCK_COMMENT) {
      r = block_comment(b, 0);
    }
    else if (t == CALLBACK_TRANSITION) {
      r = callback_transition(b, 0);
    }
    else if (t == COMMENT) {
      r = comment(b, 0);
    }
    else if (t == CONTEXT_CLASS_DECLARATION) {
      r = context_class_declaration(b, 0);
    }
    else if (t == DECLARE) {
      r = declare(b, 0);
    }
    else if (t == ENTRY) {
      r = entry(b, 0);
    }
    else if (t == EXIT) {
      r = exit(b, 0);
    }
    else if (t == FSM_CLASS) {
      r = fsm_class(b, 0);
    }
    else if (t == FSM_CLASS_DECLARATION) {
      r = fsm_class_declaration(b, 0);
    }
    else if (t == FSM_FILE) {
      r = fsm_file(b, 0);
    }
    else if (t == FSM_PACKAGE) {
      r = fsm_package(b, 0);
    }
    else if (t == GENERIC_PARAMETER) {
      r = generic_parameter(b, 0);
    }
    else if (t == GUARD) {
      r = guard(b, 0);
    }
    else if (t == GUARD_RAW_CODE) {
      r = guard_raw_code(b, 0);
    }
    else if (t == HEADER_FILE) {
      r = header_file(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = identifier(b, 0);
    }
    else if (t == IMPORT_CLASS) {
      r = import_class(b, 0);
    }
    else if (t == IMPORT_CLASS_DECLARATION) {
      r = import_class_declaration(b, 0);
    }
    else if (t == INCLUDE_FILE) {
      r = include_file(b, 0);
    }
    else if (t == MAP) {
      r = map(b, 0);
    }
    else if (t == MAP_DECLARATION) {
      r = map_declaration(b, 0);
    }
    else if (t == NEXT_STATE) {
      r = next_state(b, 0);
    }
    else if (t == ON_STATE) {
      r = on_state(b, 0);
    }
    else if (t == PARAMETER) {
      r = parameter(b, 0);
    }
    else if (t == PARAMETER_NAME_ELEMENT) {
      r = parameter_name_element(b, 0);
    }
    else if (t == PARAMETER_TYPE) {
      r = parameter_type(b, 0);
    }
    else if (t == PARAMETER_TYPE_ELEMENT) {
      r = parameter_type_element(b, 0);
    }
    else if (t == PARAMETERS) {
      r = parameters(b, 0);
    }
    else if (t == POP_TRANSITION) {
      r = pop_transition(b, 0);
    }
    else if (t == PUSH_MAP_NAME_ELEMENT) {
      r = push_map_name_element(b, 0);
    }
    else if (t == PUSH_PROXY_STATE) {
      r = push_proxy_state(b, 0);
    }
    else if (t == PUSH_PROXY_STATE_NAME_ELEMENT) {
      r = push_proxy_state_name_element(b, 0);
    }
    else if (t == PUSH_STATE) {
      r = push_state(b, 0);
    }
    else if (t == PUSH_STATE_NAME_ELEMENT) {
      r = push_state_name_element(b, 0);
    }
    else if (t == PUSH_TRANSITION) {
      r = push_transition(b, 0);
    }
    else if (t == QUALIFIED_IDENTIFIER) {
      r = qualified_identifier(b, 0);
    }
    else if (t == START_MAP_NAME_ELEMENT) {
      r = start_map_name_element(b, 0);
    }
    else if (t == START_STATE) {
      r = start_state(b, 0);
    }
    else if (t == START_STATE_NAME_ELEMENT) {
      r = start_state_name_element(b, 0);
    }
    else if (t == STATE) {
      r = state(b, 0);
    }
    else if (t == STATES) {
      r = states(b, 0);
    }
    else if (t == STATIC_IMPORT) {
      r = static_import(b, 0);
    }
    else if (t == TRANSITION) {
      r = transition(b, 0);
    }
    else if (t == TRANSITION_ARGS) {
      r = transition_args(b, 0);
    }
    else if (t == TRANSITIONS) {
      r = transitions(b, 0);
    }
    else if (t == TRANSITIONS_BLOCK) {
      r = transitions_block(b, 0);
    }
    else if (t == TYPED_ARGUMENT_ELEMENT) {
      r = typed_argument_element(b, 0);
    }
    else if (t == VERBATIM_CODE_SECTION) {
      r = verbatim_code_section(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return fsmFile(b, l + 1);
  }

  /* ********************************************************** */
  // ACCESS_KEYWORD comment* ACCESS_LEVEL
  public static boolean access(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "access")) return false;
    if (!nextTokenIs(b, ACCESS_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ACCESS_KEYWORD);
    r = r && access_1(b, l + 1);
    r = r && consumeToken(b, ACCESS_LEVEL);
    exit_section_(b, m, ACCESS, r);
    return r;
  }

  // comment*
  private static boolean access_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "access_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "access_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // ACTION_NAME comment* PARENTHESES_OPEN comment* arguments? PARENTHESES_CLOSE comment* SEMICOLON
  public static boolean action(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action")) return false;
    if (!nextTokenIs(b, ACTION_NAME)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, ACTION_NAME);
    p = r; // pin = 1
    r = r && report_error_(b, action_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, PARENTHESES_OPEN)) && r;
    r = p && report_error_(b, action_3(b, l + 1)) && r;
    r = p && report_error_(b, action_4(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, PARENTHESES_CLOSE)) && r;
    r = p && report_error_(b, action_6(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, ACTION, r, p, null);
    return r || p;
  }

  // comment*
  private static boolean action_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "action_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean action_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "action_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // arguments?
  private static boolean action_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_4")) return false;
    arguments(b, l + 1);
    return true;
  }

  // comment*
  private static boolean action_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "action_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // (comment* action comment*)*
  public static boolean actions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions")) return false;
    Marker m = enter_section_(b, l, _NONE_, "<actions>");
    int c = current_position_(b);
    while (true) {
      if (!actions_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, ACTIONS, true, false, null);
    return true;
  }

  // comment* action comment*
  private static boolean actions_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = actions_0_0(b, l + 1);
    r = r && action(b, l + 1);
    r = r && actions_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // comment*
  private static boolean actions_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_0_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions_0_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean actions_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // BRACE_OPEN comment* actions comment* BRACE_CLOSE
  public static boolean actions_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_block")) return false;
    if (!nextTokenIs(b, BRACE_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_OPEN);
    r = r && actions_block_1(b, l + 1);
    r = r && actions(b, l + 1);
    r = r && actions_block_3(b, l + 1);
    r = r && consumeToken(b, BRACE_CLOSE);
    exit_section_(b, m, ACTIONS_BLOCK, r);
    return r;
  }

  // comment*
  private static boolean actions_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_block_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions_block_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean actions_block_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_block_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions_block_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // typed_argument_element|STRING_LITERAL comment*
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<argument>");
    r = typed_argument_element(b, l + 1);
    if (!r) r = argument_1(b, l + 1);
    exit_section_(b, l, m, ARGUMENT, r, false, null);
    return r;
  }

  // STRING_LITERAL comment*
  private static boolean argument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING_LITERAL);
    r = r && argument_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // comment*
  private static boolean argument_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_1_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_1_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // argument (COMMA comment* argument)*
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<arguments>");
    r = argument(b, l + 1);
    r = r && arguments_1(b, l + 1);
    exit_section_(b, l, m, ARGUMENTS, r, false, null);
    return r;
  }

  // (COMMA comment* argument)*
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA comment* argument
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && arguments_1_0_1(b, l + 1);
    r = r && argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // comment*
  private static boolean arguments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // BLOCK_COMMENT_OPEN BLOCK_COMMENT_CONTENT? BLOCK_COMMENT_CLOSE
  public static boolean block_comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_comment")) return false;
    if (!nextTokenIs(b, BLOCK_COMMENT_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BLOCK_COMMENT_OPEN);
    r = r && block_comment_1(b, l + 1);
    r = r && consumeToken(b, BLOCK_COMMENT_CLOSE);
    exit_section_(b, m, BLOCK_COMMENT, r);
    return r;
  }

  // BLOCK_COMMENT_CONTENT?
  private static boolean block_comment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_comment_1")) return false;
    consumeToken(b, BLOCK_COMMENT_CONTENT);
    return true;
  }

  /* ********************************************************** */
  // GUARD_BRACKET_OPEN (GUARD_NOT_BRACKET|bracket_expression)* GUARD_BRACKET_CLOSE
  static boolean bracket_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracket_expression")) return false;
    if (!nextTokenIs(b, GUARD_BRACKET_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, GUARD_BRACKET_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, bracket_expression_1(b, l + 1));
    r = p && consumeToken(b, GUARD_BRACKET_CLOSE) && r;
    exit_section_(b, l, m, null, r, p, null);
    return r || p;
  }

  // (GUARD_NOT_BRACKET|bracket_expression)*
  private static boolean bracket_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracket_expression_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!bracket_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bracket_expression_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // GUARD_NOT_BRACKET|bracket_expression
  private static boolean bracket_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracket_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, GUARD_NOT_BRACKET);
    if (!r) r = bracket_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // comment*  PARENTHESES_OPEN comment* CALLBACK_TRANSITION_NAME comment* (COMMA comment* arguments)? PARENTHESES_CLOSE
  public static boolean callback_transition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<callback transition>");
    r = callback_transition_0(b, l + 1);
    r = r && consumeToken(b, PARENTHESES_OPEN);
    r = r && callback_transition_2(b, l + 1);
    r = r && consumeToken(b, CALLBACK_TRANSITION_NAME);
    r = r && callback_transition_4(b, l + 1);
    r = r && callback_transition_5(b, l + 1);
    r = r && consumeToken(b, PARENTHESES_CLOSE);
    exit_section_(b, l, m, CALLBACK_TRANSITION, r, false, null);
    return r;
  }

  // comment*
  private static boolean callback_transition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callback_transition_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean callback_transition_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callback_transition_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean callback_transition_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callback_transition_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (COMMA comment* arguments)?
  private static boolean callback_transition_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_5")) return false;
    callback_transition_5_0(b, l + 1);
    return true;
  }

  // COMMA comment* arguments
  private static boolean callback_transition_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && callback_transition_5_0_1(b, l + 1);
    r = r && arguments(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // comment*
  private static boolean callback_transition_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_transition_5_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callback_transition_5_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // LINE_COMMENT|block_comment
  public static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    if (!nextTokenIs(b, "<comment>", BLOCK_COMMENT_OPEN, LINE_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<comment>");
    r = consumeToken(b, LINE_COMMENT);
    if (!r) r = block_comment(b, l + 1);
    exit_section_(b, l, m, COMMENT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // comment* NIL_KEYWORD comment*
  static boolean comment_nil(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_nil")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comment_nil_0(b, l + 1);
    r = r && consumeToken(b, NIL_KEYWORD);
    r = r && comment_nil_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // comment*
  private static boolean comment_nil_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_nil_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comment_nil_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean comment_nil_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_nil_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comment_nil_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // CLASS_KEYWORD comment* qualified_identifier
  public static boolean context_class_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "context_class_declaration")) return false;
    if (!nextTokenIs(b, CLASS_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, CLASS_KEYWORD);
    p = r; // pin = 1
    r = r && report_error_(b, context_class_declaration_1(b, l + 1));
    r = p && qualified_identifier(b, l + 1) && r;
    exit_section_(b, l, m, CONTEXT_CLASS_DECLARATION, r, p, null);
    return r || p;
  }

  // comment*
  private static boolean context_class_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "context_class_declaration_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "context_class_declaration_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // DECLARE_KEYWORD comment* DECLARE_STATEMENT
  public static boolean declare(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare")) return false;
    if (!nextTokenIs(b, DECLARE_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DECLARE_KEYWORD);
    r = r && declare_1(b, l + 1);
    r = r && consumeToken(b, DECLARE_STATEMENT);
    exit_section_(b, m, DECLARE, r);
    return r;
  }

  // comment*
  private static boolean declare_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declare_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // comment* ENTRY_KEYWORD comment* actions_block
  public static boolean entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<entry>");
    r = entry_0(b, l + 1);
    r = r && consumeToken(b, ENTRY_KEYWORD);
    p = r; // pin = 2
    r = r && report_error_(b, entry_2(b, l + 1));
    r = p && actions_block(b, l + 1) && r;
    exit_section_(b, l, m, ENTRY, r, p, null);
    return r || p;
  }

  // comment*
  private static boolean entry_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "entry_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean entry_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "entry_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // comment* EXIT_KEYWORD comment* actions_block
  public static boolean exit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exit")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<exit>");
    r = exit_0(b, l + 1);
    r = r && consumeToken(b, EXIT_KEYWORD);
    p = r; // pin = 2
    r = r && report_error_(b, exit_2(b, l + 1));
    r = p && actions_block(b, l + 1) && r;
    exit_section_(b, l, m, EXIT, r, p, null);
    return r || p;
  }

  // comment*
  private static boolean exit_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exit_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "exit_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // comment*
  private static boolean exit_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exit_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "exit_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // (verbatim_code_section|fsm_package| context_class_declaration| start_state|fsm_class_declaration|fsm_file| header_file| include_file|
  //  import_class_declaration| declare| access| comment)* map_declaration+ comment*
  static boolean fsmFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fsmFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = fsmFile_0(b, l + 1);
    r = r && fsmFile_1(b, l + 1);
    r = r && fsmFile_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (verbatim_code_section|fsm_package| context_class_declaration| start_state|fsm_class_declaration|fsm_file| header_file| include_file|
  //  import_class_declaration| declare| access| comment)*
  private static boolean fsmFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fsmFile_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!fsmFile_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fsmFile_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }
